--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.2.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-select-component": "^4.3.4",
+    "react-no-ssr": "^1.1.0",
     "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5",
     "react-select": "^5.6.0",
     "typescript": "4.8.4"
   },
