--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "axios": "^1.2.0",
-    "next": "13.0.2",
+    "dayjs": "^1.11.7",
+    "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-select-component": "^4.3.4",
@@ -22,6 +23,7 @@
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-select": "^5.6.0",
+    "sharp": "^0.32.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
